force-app/main/default/objects/Salesforce_Licence__c/Salesforce_Licence__c.object-meta.xml
<CustomObject>
    <description>Record of licences purchased , ownership and who is utilising them.</description>
    <label>Salesforce Licence</label>
    <nameField>
        <displayFormat>Licence-{00000}</displayFormat>
        <label>Salesforce Licence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Licences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>