force-app/main/default/objects/Salesforce_Licence__c/fields/Apttus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__c</fullName>
    <label>Apttus</label>
    <summaryFilterItems>
        <field>Salesforce_Feature_Licence__c.Feature_Licence_Type__c</field>
        <operation>equals</operation>
        <value>Apttus</value>
    </summaryFilterItems>
    <summaryForeignKey>Salesforce_Feature_Licence__c.Salesforce_Licence__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>