force-app/main/default/objects/Salesforce_Licence__c/fields/WorkCentreCode__c.field-meta.xml
<CustomField>
    <fullName>WorkCentreCode__c</fullName>
    <formula>User__r.Work_Center_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkCentreCode</label>
    <type>Text</type>
</CustomField>