force-app/main/default/objects/Salesforce_Licence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Licence_Orders__c</columns>
    <columns>User__c</columns>
    <columns>IsUserActive__c</columns>
    <columns>WorkCentreCode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>