force-app/main/default/objects/Salesforce_Licence__c/listViews/General_Unassigned.listView-meta.xml
<ListView>
    <fullName>General_Unassigned</fullName>
    <columns>NAME</columns>
    <columns>Licence_Orders__c</columns>
    <columns>User__c</columns>
    <columns>IsUserActive__c</columns>
    <columns>LicenceType__c</columns>
    <columns>Temporary_access__c</columns>
    <columns>Work_Centre_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LicenceType__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Licence_Orders__c</field>
        <operation>equals</operation>
        <value>General</value>
    </filters>
    <label>General Unassigned</label>
    <language>en_US</language>
    <sharedTo>
        <role>SO_Sales_Excellence</role>
    </sharedTo>
</ListView>