force-app/main/default/objects/Salesforce_Licence__c/listViews/Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Inactive_Users</fullName>
    <columns>NAME</columns>
    <columns>Licence_Orders__c</columns>
    <columns>User__c</columns>
    <columns>IsUserActive__c</columns>
    <columns>WorkCentreCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>IsUserActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Users</label>
</ListView>