force-app/main/default/objects/Salesforce_Licence__c/listViews/Order_1.listView-meta.xml
<ListView>
    <fullName>Order_1</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit_Owner__c</columns>
    <columns>User__c</columns>
    <columns>Work_Centre_Code__c</columns>
    <columns>Licence_Orders__c</columns>
    <filterScope>Everything</filterScope>
    <label>Order 1</label>
</ListView>